kube/client/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: iap-cert-test
spec:
  defaultBackend:
    service:
      name: client-service
      port:
        number: 8080
